CI: Add go-licenses
Signed-off-by: Kohei Tokunaga <ktokunaga.mail@gmail.com>

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -81,3 +81,7 @@ jobs:
       run: |
         go install github.com/vbatts/git-validation@v1.2.0
         git-validation -v -run DCO
+    - name: "Check License"
+      run: |
+        go install github.com/google/go-licenses@v1.6.0
+        make go-licenses
