--- a/extras/fs-wrapper/Cargo.toml
+++ b/extras/fs-wrapper/Cargo.toml
@@ -7,7 +7,8 @@ edition = "2021"
 crate-type = ["cdylib"]
 
 [dependencies]
-wit-bindgen = "0.41"
+wit-bindgen = "0.51"
+wit-bindgen-rt = { version = "0.44", features = ["bitflags"] }
 
 [package.metadata.component]
 package = "c2w:fs-wrapper"
