--- a/extras/fs-wrapper/Cargo.toml
+++ b/extras/fs-wrapper/Cargo.toml
@@ -14,9 +14,14 @@ wit-bindgen-rt = { version = "0.44", features = ["bitflags"] }
 package = "c2w:fs-wrapper"
 
 [package.metadata.component.target]
+# Use local WIT files in wit/deps/ (matching wasmtime v41.0.0 preview1 adapter WASI 0.2.6)
 path = "wit"
 
+# Local WIT file paths - using bundled files from wasmtime v41.0.0 to match WASI 0.2.6
 [package.metadata.component.target.dependencies]
-"wasi:io" = "0.2.9"
-"wasi:clocks" = "0.2.9"
-"wasi:filesystem" = "0.2.9"
+"wasi:io" = { path = "wit/deps/wasi-io" }
+"wasi:clocks" = { path = "wit/deps/wasi-clocks" }
+"wasi:filesystem" = { path = "wit/deps/wasi-filesystem" }
+"wasi:cli" = { path = "wit/deps/wasi-cli" }
+"wasi:sockets" = { path = "wit/deps/wasi-sockets" }
+"wasi:random" = { path = "wit/deps/wasi-random" }
